# Isoberry

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
assets/levels/: basis.txt
assets/players/generic/more/: N.aseprite  NW.aseprite  SW.aseprite  W.aseprite
game/: Game.cpp  Game.h  game.cpp  game.h
game/editor/: ObjectMaker.cpp  ObjectMaker.h
game/level/: Level.cpp  Level.h
game/network/client/: Client.cpp  Client.h  ClientBundle.h
game/network/server/: Server.cpp  Server.h  ServerGUI.cpp  ServerGUI.h
game/objects/: Object.cpp  Object.h  Physical.h  Player.cpp  Player.h  Shadow.cpp  Shadow.h  player.cpp  player.h
game/objects/animation/: Animation.cpp  Animation.h
game/objects/collision/: Collider.cpp  Collider.h  Physical.cpp
game/tool/: Collider.cpp  DrawLineToSprite.cpp  DrawLineToSprite.h  Img.cpp  Img.h  collider.cpp  collider.h  img.cpp  v3.h
game/tool/SpriteSaving/: Saving.h  saving.cpp
game/tool/art/: ColliderTemplate.cpp  ColliderTemplate.h  colliderTemplate.cpp  colliderTemplate.h
game/tool/collision/: Collider.cpp  Collider.h
game/tool/draw_sprites/: DrawLineToSprite.cpp  DrawLineToSprite.h
game/tool/input/: NumberTextBox.cpp  NumberTextBox.h  Options.cpp  Options.h  Replace.cpp  Replace.h  ResolutionDialogue.cpp  ResolutionDialogue.h
game/tool/layering/: DrawOrderSystem.cpp  DrawOrderSystem.h
game/tool/memory/: Garbage.cpp
game/tool/sprite_saving/: Saving.cpp
header/: GlobalVariable.h  olcPixelGameEngine.h  stb_image.h
resources/app/: create_dmg.sh
resources/assets/levels/: basis.txt
resources/assets/players/generic/more/: S.aseprite
src/: Game.cpp  Game.h  MMO_Client.cpp  MMO_Common.h  MMO_Server.cpp  TestGame.cpp  main.cpp
src/editor/: ObjectMaker.cpp  ObjectMaker.h
src/header/: GlobalVariable.h
src/level/: Level.cpp
src/network/: NetworkVar.h  network.txt
src/network/server/: Server.cpp  Server.h
src/objects/: Object.cpp  Object.h  Player.cpp  Player.h  Shadow.h
src/objects/animation/: Animation.cpp  Animation.h
src/objects/collision/: Collider.cpp  Physical.cpp  Physical.h
src/tool/: Img.h  v3.h
src/tool/art/: ColliderTemplate.h
src/tool/draw_sprites/: DrawLineToSprite.cpp  DrawLineToSprite.h
src/tool/input/: NumberTextBox.h  Options.cpp  Options.h  Replace.cpp  ResolutionDialogue.cpp  ResolutionDialogue.h
src/tool/layering/: DrawOrderSystem.cpp
src/tool/memory/: Garbage.cpp  Garbage.h
src/tool/sprite_saving/: Saving.h
src/utility/: Signals.cpp  Signals.h
src/utility/settings/: Resolution.cpp  Resolution.h  Settings.cpp  Settings.h
submodules/fpng/: CMakeLists.txt
submodules/olcNet/: CMakeLists.txt  olcPGEX_Network.h  olcPGEX_TransformedView.h
submodules/olcPixelGameEngine/: CMakeLists.txt
submodules/qu3e/: CMakeLists.txt
submodules/stbImage/: CMakeLists.txt
utility/: AssetPath.cpp  AssetPath.h  Signals.cpp  Signals.h  assetPath.cpp
utility/settings/: Native.h  Settings.h  resolution.cpp  resolution.h  settings.cpp  settings.h
